Add ites header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,19 @@
-<p>{{'Welcome'|translate}}</p>
+<div class="container">
+  <div class="first-column">
+    <ul>
+      <li><img src="../../assets/logo.png" alt=""></li>
+      <li>{{ "Movies"|translate }}</li>
+      <li>{{ "TvShows"|translate }}</li>
+      <li>{{ "People"|translate }}</li>
+      <li>{{ "More"|translate }}</li>
+    </ul>
+  </div>
+  <div class="second-column">
+    <ul>
+      <li><mat-icon>add</mat-icon></li>
+      <li>ES</li>
+      <li>{{"ToAccess"|translate}}</li>
+      <li><mat-icon>search</mat-icon></li>
+    </ul>
+  </div>
+</div>
